Fix side content panels overlapping control bar

--- a/src/styles/_mobileworkspace.scss
+++ b/src/styles/_mobileworkspace.scss
@@ -221,6 +221,7 @@ $shadow-light: rgba(0, 0, 0, 0.2);
   }
 
   .mobile-editor-panel {
+    position: absolute;
     width: 100vw;
     height: var(--mobile-panel-height, calc(100% - 70px));
     z-index: 1;
